Create the mechanism of the demand detail screen (empty UI)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,8 @@
     <string name="av_app_name">test-allo</string>
 
     <!-- Activities Title -->
-    <string name="av_activity_demand_title">Autour de moi</string>
+    <string name="av_activity_demand_list_title">Autour de moi</string>
+    <string name="av_activity_demand_detail_title">Détail</string>
 
     <!-- Messages -->
     <string name="av_demand_list_no_data_msg">Aucune demande disponible pour le moment</string>
