--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,9 @@
     <string name="av_exit">Quitter</string>
     <string name="av_object">Objet</string>
     <string name="av_service">Service</string>
-    <string name="av_retrieve_data_failed_message">Échec de la récupération des données.</string>
-    <string name="av_no_internet_connection_first_launch_message">Une connexion Internet est nécessaire lors du premier lancement de l\'application.</string>
+    <string name="av_ask_question">Posez une question</string>
+    <string name="av_make_an_offer">Faire une offre</string>
+    <string name="av_published_at">Posté le %s</string>
 
     <!-- Application name -->
     <string name="av_app_name">test-allo</string>
@@ -17,6 +18,9 @@
 
     <!-- Messages -->
     <string name="av_demand_list_no_data_msg">Aucune demande disponible pour le moment</string>
+    <string name="av_retrieve_data_failed_message">Échec de la récupération des données.</string>
+    <string name="av_no_internet_connection_first_launch_message">Une connexion Internet est nécessaire lors du premier lancement de l\'application.</string>
+    <string name="av_demand_detail_no_description_message">Description non disponible</string>
 
     <!-- Demand info -->
     <plurals name="av_answer_count_pattern">
